--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link id=estilo rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/1042ee8813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -24,6 +24,7 @@
             <li><a href="https://recetinas.com/seccion/cocina-colombiana/" target="_blank">de Colombia</a></li>
             <li><a href="https://recetinas.com/seccion/cocina-cubana/" target="_blank">de Cuba</a></li>
             <li><a href="https://recetinas.com/seccion/cocina-francesa/" target="_blank">de Francia</a></li>
+            <li><button id="btmodo" value="cambiar a modo oscuro" onclick="cambia_de_modo(this)">cambiar a modo oscuro</button></li> 
 			
                 
 				
@@ -102,5 +103,6 @@
         </ul>
    
 </footer> 
+<script src="./js/index.js"></script>
 </body>
 </html>
